--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     ></script>
     <meta name="theme-color" content="#1976d2" />
   </head>
-  <body style="background-color: #fafafa">
+  <body style="background-color:white">
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
